# wiggle

./: AGENTS.md  CLAUDE.md  README.md  RELEASING.md  index.html  package.json  test-setup.ts
.github/workflows/: ci.yml  deploy-pages.yml  release.yml  windows.yml
.macos-builder/: build.sh  config
docs/: index.html
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  ingest.rs  lib.rs  main.rs  provider.rs  settings.rs
src-tauri/src/macos/: hotkey.rs  mod.rs  overlay.rs  screen.rs
src/lib/: IconButton.tsx  catalog.test.ts  client.test.ts  client.ts  format.test.ts  format.ts  history.test.ts  history.ts  locale.test.ts  locale.ts  strike.test.ts  strike.ts
src/locales/de/: common.json
src/locales/en/: common.json
src/locales/es/: common.json
src/locales/fr/: common.json
src/locales/hi/: common.json
src/locales/it/: common.json
src/locales/ja/: common.json
src/locales/ko/: common.json
src/locales/pt-BR/: common.json
src/locales/ru/: common.json
src/locales/zh-Hans/: common.json
src/locales/zh-Hant/: common.json
