[package]
name = "wiggle"
version = "0.1.0"
description = "Keep only what won't budge."
authors = ["stuffbucket"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wiggle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for the transparent NSPanel overlay (also pulled in
# transitively by tauri-nspanel). tray-icon: the menubar app.
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

# --- macOS-native overlay (NSPanel shell, global hotkey, screen targeting) ---
# objc2 versions are pinned to exactly what tauri-nspanel v2.1 depends on, so the
# AppKit types line up across the crate graph (a version skew would surface as
# type-mismatch errors on set_collection_behavior / set_style_mask).
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSResponder",
  "NSWindow",
  "NSPanel",
  "NSView",
  "NSScreen",
  "NSEvent",
  "NSApplication",
  "NSColor",
  "NSGraphics",
] }
objc2-foundation = { version = "0.3", features = [
  "NSGeometry",
  "NSString",
  "NSArray",
  "NSThread",
] }
block2 = "0.6"

# --- Windows / Linux fallback: no NSPanel, so summon a normal always-on-top
# window via a global-shortcut chord and position it with the positioner plugin.
[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
